Fix column width and overflowing

--- a/app/javascript/app/styles/themes/table/explore-table-theme.scss
+++ b/app/javascript/app/styles/themes/table/explore-table-theme.scss
@@ -9,7 +9,7 @@ $lighter-blue-2: #d4dff4;
   align-items: flex-end;
 
   > div {
-    padding: 20px;
+    padding: 0 10px 10px;
   }
 }
 
